[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/EndingScene.gd" id="1_end"]
[ext_resource type="Texture2D" path="res://Assets/intro_bg.png" id="2_bg"]

[node name="EndingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_end")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpacerTop" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 720)
layout_mode = 2

[node name="CreditsLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Credits Placeholder"
fit_content = true

[node name="SpacerBottom" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="ReturnButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "กลับสู่เมนูหลัก"

[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]

[node name="Part2Button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -160.0
offset_right = 100.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "ไปต่อภาค 2 (Part 2)"

[connection signal="pressed" from="Part2Button" to="." method="_on_part2_button_pressed"]
